apps/base/media/sabnzbd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sabnzbd
  name: sabnzbd
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  strategy: {}
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      securityContext:
        fsGroup: 2000
        runAsUser: 2002
        runAsGroup: 2000
      containers:
        - image: lscr.io/linuxserver/sabnzbd:5.1.3-ls272
          name: sabnzbd
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: run
              mountPath: /run
            - name: config
              mountPath: /config
            - name: usenet
              mountPath: /data/usenet
              subPath: usenet
          resources:
            limits:
              memory: 768Mi
            requests:
              cpu: 5m
              memory: 768Mi
          securityContext:
            allowPrivilegeEscalation: false
      volumes:
        - name: run
          emptyDir:
            sizeLimit: 500Mi
        - name: config
          persistentVolumeClaim:
            claimName: sabnzbd-config
        - name: usenet
          persistentVolumeClaim:
            claimName: media-data
