apps/base/media/sabnzbd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  namespace: media
spec:
  ingressClassName: traefik
  rules:
    - host: sabnzbd.local
      http:
        paths:
          - backend:
              service:
                name: sabnzbd
                port:
                  number: 80
            path: /
            pathType: Prefix
